==

* Split out a StringMethods module [issue #7]
* Renamed assert_output_equal to assert_str_equal and assert_alike to 
  assert_str_match.
* Added FileMethods#_prepare and made prepare outdent content [issue #9]

== 0.1.0 2011/07/07

Initial release.

Much of this code started in the {Tap-Test}[http://rubygems.org/gems/tap-test]
gem and was later added-to by Linecook[http://rubygems.org/gems/linecook]. It
has long wished to be it's own gem, and now it is.